# prescriberAI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.cursor/rules/: backend.mdc  frontend.mdc  project.mdc
app/: config.py  main.py
app/models/: schemas.py
app/routers/: chat.py  npi.py
app/services/: ai_service.py  npi_service.py  onboarding_validation.py
docs/: architecture.mermaid  e2e-scenarios.md  product-brief.md  stakeholder-product-brief.md  user-flow.mermaid
frontend/: .env.example  index.html
frontend/src/: App.tsx  api.ts  configuredAccountsStorage.ts  index.css  specialistPhone.ts  types.ts
frontend/src/components/: AccountsHome.tsx  Chat.tsx  ConfigSidebar.tsx  NpiLookup.tsx  PracticeConfirm.tsx  ProgressBar.tsx  ScheduleCallLink.tsx  Summary.tsx
static/: index.html
tests/: README.md  conftest.py  test_api_e2e.py  test_classify.py  test_functional_e2e.py  test_npi_service.py  test_onboarding_validation.py  test_schemas.py
