[project]
name = "onboarding-wizard"
version = "0.1.0"
description = "PrescriberPoint AI practice onboarding: NPI lookup, LangGraph+Claude config chat, optional Groq validation, FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langfuse>=2.0.0",
    "langchain>=1.2.13",
]

[project.scripts]
dev = "uvicorn app.main:app --reload --port 8080"

[tool.pytest.ini_options]
markers = [
    "e2e: multi-step HTTP journeys (mocked LLM where noted)",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
